--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,10 @@
 @tailwind utilities;
 
 #root {
-  /* max-width: 1280px; */
+  min-width: 375px;
+  max-width: 475px !important;
   margin: 0 auto;
-  padding: 0;
+  /* padding: 0; */
+  border: 1px solid #000;
   /* text-align: center; */
 }
